Users can sign in to the profile page.
Added zustand to handle global state.
Create services folder to handle api calls.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "sonner": "^1.2.4",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
