--- a/backend/Pipfile
+++ b/backend/Pipfile
@@ -10,6 +10,7 @@ flask-sqlalchemy = "*"
 flask-migrate = "*"
 flask-smorest = "*"
 flask-cors = "*"
+flask-jwt-extended = "*"
 
 [dev-packages]
 black = "*"
